Edited container build process

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasourse.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${db-url:jdbc:postgresql://localhost:5432/school_db}
+spring.datasource.url=${db-url:jdbc:postgresql://db:5432/school_db}
 spring.datasource.username=${db-username:admin}
 spring.datasource.password=${db-password:admin}
 
