--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,15 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
     restart: always
-  backend:
-    build: .
-    container_name: school_api
-    ports:
-      - 8080:8080
-    environment:
-      db-url: jdbc:postgresql://db:5432/school_db
-      db-username: admin
-      db-password: admin
-    depends_on:
-      - db
-    restart: always
+#  backend:
+#    build: .
+#    container_name: school_api
+#    ports:
+#      - 8080:8080
+#    environment:
+#      db-url: jdbc:postgresql://db:5432/school_db
+#      db-username: admin
+#      db-password: admin
+#    depends_on:
+#      - db
+#    restart: always
